[tool.poetry]
name = "datadis"
version = "0.8.0"
description = "Datadis API client"
readme = "README.md"
authors = ["Alvaro Tinoco <alvarotinocomarmol@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.5"
httpx = "^0.23.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
pylint = "^2.15.10"
black = "^22.12.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_toml = "pyproject.toml:tool.poetry.version"
build_command = "pip install poetry && poetry build"

[tool.black]
line-length = 79